# Qt6Projects

./: potentialUnleashed.ui
Assignment2_Question1/: CMakeLists.txt  guestregistration.cpp  guestregistration.h  main.cpp  person.cpp  person.h  registration.cpp  registration.h  registrationdialog.cpp  registrationdialog.h  registrationlist.cpp  registrationlist.h  studentregistration.cpp  studentregistration.h
Assignment2_Question2/: .gitignore  CMakeLists.txt  Test.xml  guestregistration.h  registration.cpp  registration.h  registrationdialog.cpp  registrationdialog.h  registrationlist.cpp  registrationlist.h  registrationlistreader.cpp  registrationlistreader.h  registrationlistwriter.cpp
Assignment2_Question3/: Ass3_Test.xml  CMakeLists.txt  guestregistration.h  main.cpp  person.h  registration.cpp  registrationdialog.cpp  registrationdialog.h  registrationlistreader.cpp  registrationlistreader.h  registrationlistwriter.cpp
Assignment2_Question4/: CMakeLists.txt  abstractregistrationfactory.cpp  abstractregistrationfactory.h  guestregistration.cpp  main.cpp  registration.h  registrationdialog.cpp  registrationdialog.h  registrationfactory.cpp  registrationfactory.h  registrationlistreader.cpp  registrationlistreader.h  studentregistration.cpp  test.xml
Assignment2_Question4_Complete/: CMakeLists.txt  dummy.xml  guestregistration.cpp  main.cpp  registrationdialog.cpp  registrationdialog.h  registrationfactory.cpp  registrationfactory.h  registrationlistreader.cpp  registrationlistreader.h  registrationlistwriter.cpp  registrationlistwriter.h  studentregistration.cpp  studentregistration.h  test.xml
Assignment3_Q4/: CMakeLists.txt  main.cpp  mainwindow.cpp
Assignment3_Question1/: CMakeLists.txt  book.cpp  book.h  bookinput.cpp  bookinput.h  bookwriter.cpp  example.xml  main.cpp  test.xml
Assignment3_Question2/: CMakeLists.txt  book.h  bookinput.cpp  bookinput.h  bookwriter.cpp  bookwriter.h  main.cpp  test.xml
Assignment3_Question4/: CMakeLists.txt  PrimeFinder.cpp  PrimeFinder.h  main.cpp  primeDialog.cpp  primeDialog.h  primefinder.cpp  primefinder.h  primeworker.cpp  primeworker.h
ExamPrep/: CMakeLists.txt  bar.cpp  bar.h  barfactory.cpp  barfactory.h  chocolate.cpp  chocolate.h  chocolatefactory.cpp  chocolatefactory.h  customer.cpp  customer.h  slab.cpp  slab.h  slabfactory.cpp  slabfactory.h
ExamPreperation/: CMakeLists.txt  chocolate.cpp  chocolate.h  main.cpp  person.cpp  person.h  product.cpp  product.h  rainfall.cpp  rainfall.h  scan.cpp  scan.h  staff.cpp  staff.h  staffmanager.cpp  staffmanager.h
MyPainterApp/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
MyPasswordValidator/: CMakeLists.txt  main.cpp  validatordialog.cpp  validatordialog.h
PotentialUnleashed/: CMakeLists.txt  createworkoutdialog.cpp  createworkoutdialog.h  exercise.cpp  exercise.h  main.cpp  mainwindow.cpp  mainwindow.h  potentialunleashed.sqbpro  utlity.cpp  utlity.h  workout.h
Raylib-CPP-Starter-Template-for-VSCODE-main/: ball.cpp  ball.h  main.cpp
RaylibDev/BasicBuild/: CMakeLists.txt  game.cpp  main.cpp
RaylibDev/CameraApp/: CMakeLists.txt  main.cpp
RaylibDev/SnakePlusPlus/: CMakeLists.txt  food.cpp  food.h  main.cpp  mathutility.cpp  mathutility.h  snake.cpp  snake.h
SimpleGuiInteractionWithDB/: CMakeLists.txt  dialog.cpp  dialog.h  main.cpp
TheWeirdNatureOfVirtualityinCpp/: CMakeLists.txt  main.cpp  person.cpp  person.h  registration.cpp  registration.h  studentregistration.cpp  studentregistration.h
Tic-Tac-Toe/: CMakeLists.txt  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  player.cpp  player.h  positionrect.cpp  positionrect.h  stage.cpp  stage.h
TinyRayCaster/crude3DRendering/: CMakeLists.txt  main.cpp
TinyRayCaster/drawTheMap/: CMakeLists.txt  main.cpp
helloWorldQt6/: CMakeLists.txt  main.cpp  mainwindow.cpp
workingWithDb/: CMakeLists.txt  main.cpp
writingXML/: .gitignore  CMakeLists.txt  MyXML.xml  main.cpp
